# pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  manual.html  pyproject.toml  setup.html
.claude/: launch.json
assets/: site.css
pipeline/: __init__.py  __main__.py  cli.py  config.py
pipeline/api/: __init__.py  _default_plugin_panel.html  admin_cmds.py  admin_deploy.py  dashboard.py  flow.py  minio_proxy.py  plugin_runtime.py  plugins_local.py  service_logs.py  settings.py  system.py  workers.py  workloads.py
pipeline/auth/: __init__.py
pipeline/control/: __init__.py  flow_layout.yaml  local_log_handler.py  self_loop_watchdog.py  server.py
pipeline/db/: __init__.py  base.py  mariadb.py  schema.py  sqlite.py
pipeline/executors/: __init__.py  base.py  python_module.py  shell.py
pipeline/input_sources/: __init__.py
pipeline/models/: __init__.py  metric_fields.py  workload.py
pipeline/repositories/: __init__.py  deploy_paths.py  deploy_targets.py  llm_calls.py  queue.py  runs.py  service_logs.py  settings.py  worker_admin_cmds.py  workers.py  workloads.py
pipeline/web/: __init__.py
pipeline/worker/: __init__.py  admin_executor.py  (+4 more)
scripts/: bootstrap.sh  deploy-to-gpu.sh  fix_jp_spaces.py  install-multi-worker.sh  make_icons.py  pipeline-worker-gpu@.service
tests/: test_api_workers.py  test_api_workloads.py  test_control_server.py  test_db_sqlite.py  test_executors_python_module.py  test_executors_python_module_source_path.py  test_executors_shell.py  test_models_workload.py  test_repositories_queue_runs.py  test_repositories_workloads.py  test_smoke.py  test_worker_drain.py  test_worker_drain_cache.py
web/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
(+65 files in other folders)
