[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "pipeline"
version = "0.0.1.dev0"
description = "GUI-first batch fleet for non-programmers — the simple half of Ray, without the actor model."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "paps-jp" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "passlib[scrypt]>=1.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
mysql = ["pymysql>=1.1", "mariadb>=1.1"]
prometheus = ["prometheus-client>=0.17"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
pipeline = "pipeline.cli:main"

[project.urls]
Homepage = "https://github.com/paps-jp/pipeline"  # 仮
Documentation = "https://github.com/paps-jp/pipeline#readme"
Issues = "https://github.com/paps-jp/pipeline/issues"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]   # ruff format で 整形済の想定

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q"
